--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"dev": "concurrently \"npm run server\" \"npm run client\"",
+		"server": "npm run server --prefix server",
+		"client": "npm start --prefix client"
 	},
 	"keywords": [],
 	"author": "",
