--- a/package.json
+++ b/package.json
@@ -1,18 +1,27 @@
 {
-	"name": "StarWars-GQL-CRA",
+	"name": "server",
 	"version": "1.0.0",
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"dev": "concurrently \"npm run server\" \"npm run client\"",
-		"server": "npm run server --prefix server",
-		"client": "npm start --prefix client"
+		"server": "nodemon --exec babel-node src/index.js"
 	},
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
-	"devDependencies": {
-		"concurrently": "^6.0.0"
+	"dependencies": {
+		"apollo-server-express": "^2.21.0",
+		"axios": "^0.21.1",
+		"cors": "^2.8.5",
+		"dotenv": "^8.2.0",
+		"express": "^4.17.1",
+		"graphql": "^15.5.0"
 	},
-	"dependencies": {}
+	"devDependencies": {
+		"@babel/cli": "^7.13.0",
+		"@babel/core": "^7.13.8",
+		"@babel/node": "^7.13.0",
+		"@babel/preset-env": "^7.13.8",
+		"nodemon": "^2.0.7"
+	}
 }
